Bug 46144 - "Distributy Columns Evenly" does not work with the selected columns, but affects all columns in the table
Summary: "Distributy Columns Evenly" does not work with the selected columns, but affe...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: All All
: medium major
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:3.6.0 target:3.5.1
Keywords: regression
: 45555 46375 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2012-02-15 21:05 UTC by ape
Modified: 2012-04-09 11:34 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ape 2012-02-15 21:05:38 UTC
LibreOffice-3.5.0; Writer; all operating systems.
 The menu "Distributy Columns Evenly" does not work with the selected columns
 1. Create a text document.
 2. Insert a table containing three or more columns that have the same width.
 3. Change the width of the 2nd column.
 4. Select the 2nd and 3rd column.
 5. Click "Distributy Columns Evenly" (menu "Table - Autofit >")
 There is alignment of the width of the columns of the table. Width should be lined only selected (second and third) column. So working LibreWriter-3.3.x; 3.4.x. This is - a critical regression bug.
Comment 1 ape 2012-02-18 18:44:04 UTC
Error is in the "LibreOffice_Writer-3.5.1rc0; 3.6.0alfa". I changed the status to "highest" and "blocker" because it was very long and inconvenient to edit tables in text documents.
Comment 2 Cor Nouws 2012-02-19 12:09:37 UTC
A bug that has to be fixed, but since there is no data loss, and also enough work arounds, I think it's fair to call it a major bug.
Medium / High / Highest is at distiction of the people that have to work on the bug.

Thanks for reporting this, ape! - Cor
Comment 3 sasha.libreoffice 2012-02-20 03:26:33 UTC
reproduced in 3.5.0 and 3.6.0 97fdf02-9eed775-f061262 on Fedora 64 bit
and in 3.5.0 beta 3 on Windows XP 32 bit
but not reproducible in 3.4.2 and 3.3.4 , therefore regression since 3.4

(function changes size not only selected columns of table, but all columns. To see it, change size of several columns of table before testing this function, but select only two for resizing)
Comment 4 Urmas 2012-02-21 05:46:52 UTC
*** Bug 46375 has been marked as a duplicate of this bug. ***
Comment 5 Sciuriware 2012-02-21 05:53:30 UTC
I'm very curious about what workaround is suggested.
Or should we set column width by hand one by one?
A real-life situation will rather concern some 20 columns.

;JOOP!
Comment 6 sasha.libreoffice 2012-02-21 06:18:34 UTC
*** Bug 45555 has been marked as a duplicate of this bug. ***
Comment 7 ape 2012-02-21 07:03:31 UTC
(In reply to comment #5)
> I'm very curious about what workaround is suggested.
> Or should we set column width by hand one by one?
> A real-life situation will rather concern some 20 columns.
> 
> ;JOOP!

The width of the columns aligned by hand now. We went back to 1995. The possibility of alignment by hand only is the reason which forced me to assign a status to "BLOCER".
Comment 8 Josh Heidenreich 2012-02-23 18:43:06 UTC
Take a look at SwDoc::AdjustCellWidth, in sw/source/code/docnode/ndtbl1.cxx. I think the bug is in there.
Comment 9 sasha.libreoffice 2012-02-23 21:25:51 UTC
@ Michael
Please, take look at this bug, comment 8. My be source of error is found.
Comment 10 Not Assigned 2012-02-26 07:35:40 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=996f44c310520e3d7868c62d336aaec7bb0f845a

fdo#46144: "Distributy Columns Evenly" does not work with the selected columns
Comment 11 Ivan Timofeev (retired) 2012-02-26 07:41:11 UTC
(In reply to comment #8)
> Take a look at SwDoc::AdjustCellWidth, in sw/source/code/docnode/ndtbl1.cxx. I
> think the bug is in there.

Thank you so much Josh!!! Excellent pointer!
Comment 12 sasha.libreoffice 2012-02-27 01:21:37 UTC
Thanks to Josh for finding and to Ivan for fixing
Comment 13 Ivan Timofeev (retired) 2012-02-27 03:58:43 UTC
http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5&id=4f8094d0489d31563f18fb31bad366be2c19046f

It will be available in LibreOffice 3.5.2.
Comment 14 Not Assigned 2012-02-27 08:29:30 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3aeba34bc8fb66ef8530be336531763bc34afa37&g=libreoffice-3-5-1

fdo#46144: "Distributy Columns Evenly" does not work with the selected columns


It will be available already in LibreOffice 3.5.1.
Comment 15 Cor Nouws 2012-04-09 11:34:49 UTC
verified in 3.5.2 (and in master) - ok > thanks