fdo#46144: "Distributy Columns Evenly" does not work with the selected columns

regression from f7303fcac779f99931bfba48e8bfcf9c081af67f:

-    SvUShorts aWish( nTmp, nTmp ),
+    std::vector<sal_uInt16> aWish( nTmp, nTmp ),
               aMins( nTmp, nTmp );

Signed-off-by: Norbert Thiebaud <nthiebaud@gmail.com>